tests/baselines/reference/thisInInvalidContextsExternalModule.symbols
=== tests/cases/conformance/expressions/thisKeyword/thisInInvalidContextsExternalModule.ts ===
//'this' in static member initializer
class ErrClass1 {
>ErrClass1 : Symbol(ErrClass1, Decl(thisInInvalidContextsExternalModule.ts, 0, 0))

    static t = this; // Error
>t : Symbol(ErrClass1.t, Decl(thisInInvalidContextsExternalModule.ts, 1, 17))
>this : Symbol(ErrClass1, Decl(thisInInvalidContextsExternalModule.ts, 0, 0))
}

class BaseErrClass {
>BaseErrClass : Symbol(BaseErrClass, Decl(thisInInvalidContextsExternalModule.ts, 3, 1))

    constructor(t: any) { }
>t : Symbol(t, Decl(thisInInvalidContextsExternalModule.ts, 6, 16))
}

class ClassWithNoInitializer extends BaseErrClass {
>ClassWithNoInitializer : Symbol(ClassWithNoInitializer, Decl(thisInInvalidContextsExternalModule.ts, 7, 1))
>BaseErrClass : Symbol(BaseErrClass, Decl(thisInInvalidContextsExternalModule.ts, 3, 1))

    t;
>t : Symbol(ClassWithNoInitializer.t, Decl(thisInInvalidContextsExternalModule.ts, 9, 51))

    //'this' in optional super call
    constructor() {
        super(this); // error: "super" has to be called before "this" accessing
>super : Symbol(BaseErrClass, Decl(thisInInvalidContextsExternalModule.ts, 3, 1))
>this : Symbol(ClassWithNoInitializer, Decl(thisInInvalidContextsExternalModule.ts, 7, 1))
    }
}

class ClassWithInitializer extends BaseErrClass {
>ClassWithInitializer : Symbol(ClassWithInitializer, Decl(thisInInvalidContextsExternalModule.ts, 15, 1))
>BaseErrClass : Symbol(BaseErrClass, Decl(thisInInvalidContextsExternalModule.ts, 3, 1))

    t = 4;
>t : Symbol(ClassWithInitializer.t, Decl(thisInInvalidContextsExternalModule.ts, 17, 49))

    //'this' in required super call
    constructor() {
        super(this); // Error
>super : Symbol(BaseErrClass, Decl(thisInInvalidContextsExternalModule.ts, 3, 1))
>this : Symbol(ClassWithInitializer, Decl(thisInInvalidContextsExternalModule.ts, 15, 1))
    }
}

module M {
>M : Symbol(M, Decl(thisInInvalidContextsExternalModule.ts, 23, 1))

    //'this' in module variable
    var x = this; // Error
>x : Symbol(x, Decl(thisInInvalidContextsExternalModule.ts, 27, 7))
}

//'this' as type parameter constraint
// function fn<T extends this >() { } // Error

//'this' as a type argument
function genericFunc<T>(x: T) { }
>genericFunc : Symbol(genericFunc, Decl(thisInInvalidContextsExternalModule.ts, 28, 1))
>T : Symbol(T, Decl(thisInInvalidContextsExternalModule.ts, 34, 21))
>x : Symbol(x, Decl(thisInInvalidContextsExternalModule.ts, 34, 24))
>T : Symbol(T, Decl(thisInInvalidContextsExternalModule.ts, 34, 21))

genericFunc<this>(undefined);  // Should be an error
>genericFunc : Symbol(genericFunc, Decl(thisInInvalidContextsExternalModule.ts, 28, 1))
>undefined : Symbol(undefined)

class ErrClass3 extends this {
>ErrClass3 : Symbol(ErrClass3, Decl(thisInInvalidContextsExternalModule.ts, 35, 29))

}

//'this' as a computed enum value
enum SomeEnum {
>SomeEnum : Symbol(SomeEnum, Decl(thisInInvalidContextsExternalModule.ts, 39, 1))

    A = this, // Should not be allowed
>A : Symbol(SomeEnum.A, Decl(thisInInvalidContextsExternalModule.ts, 42, 15))

    B = this.spaaaace // Also should not be allowed
>B : Symbol(SomeEnum.B, Decl(thisInInvalidContextsExternalModule.ts, 43, 13))
}

export = this; // Should be an error
